
(Stuart Lewis)
- SF Patch #1737792 Patch for bug 1552760 - Submit interface looks bad in Safari
- Removal of message for Netscape users in choose-file.jsp + removal of supporting text and images in the help file
- SF Patch #1591871 Docs for google and html sitemaps
- SF Patch #1799575 New EPersonConsumer event consumer
- SF Patch #1642563 bin/update-handle-prefix rewritten in Java

(Chris Yates)
- SF Patch #1724330 Removes "null" being displayed in community-home.jsp
- SF Patch #1763535 Alert DSpace administrator of new user registration
- SF Patch #1759438 Multilingualism Language Switch - DSpace Header
- SF Patch #1888652 Statistics Rewritten In Java

(Robert Tansley / Stuart Lewis)
- SF Patch #1587225 Google and html sitemap generator

(Zuki Ebetsu)
- SF Patch #1620700 Add Community and Sub-Community to OAI Sets

(Robert Tansley)
- SF Patch #1566572 Item metadata in XHTML head <meta> elements

1.4.2 beta
===========

(Mark Diggory/Graham Triggs)
- SF Patch 1655583 Fixes issues with FilterMedia, the UI and Index locking, includes 
  a lucene upgrade to support better management of index locking.
  
(Robert Tansley)
- Fixes to QueryArgs and RegisterServlet that cause NullPointerExceptions on
  invalid input

(Andrea Bollini)
- SF Patch #1528142 Malformed OAI-PMH response: illegal bytes in UTF-8 for SF Bug #1490162

(Flavio Botelho)
- SF Patch #1601946 for SF Bug #1601875 - Makes javascript idependent to form position

(Christophe Destin)
- SF Patch #1582754 CreateAdministrator for dummies
  Creation of admin via [dspace]/bin/create-administrator for a given email, irrespective of the email
  belonging to an allready registered user.

(Richard Jones)
- SF Patch #1659868 Improved database level debugging
- SF Patch #1659901 Import community and collection structure
- SF Patch #1659837 ItemIterator now deals with item ids also
- SF Patch #1659796 Create administrator wtih command line options
- SF Patch #1659841 Add option to clear context object cache

(Mike Judd)